--- a/config/ibc/config.ini
+++ b/config/ibc/config.ini
@@ -165,7 +165,7 @@ TradingMode=
 # The default is the current working directory when IBC is
 # started.
 
-IbDir=
+IbDir=/root/Jts
 
 
 # If you wish to store a copy of your TWS settings on IB's
